# guardrail-ai

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  seed_data.py
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_saas_models.py  003_api_key_hashing.py  004_guardrail_auth_models.py
app/: celery_app.py  config.py  database.py  exception_handlers.py  logging_config.py  main.py  middleware.py  models.py  neo4j_client.py  rbac.py  schemas.py  secret_validator.py  security.py  telemetry.py
app/routes/: __init__.py  api_keys.py  audit.py  auth.py  config_scanner.py  guardrails.py  health.py  incidents.py  integrations.py  inventory.py  network.py  playbooks.py  policies.py  reporting.py  security.py  users.py  webhooks.py
app/services/: ai_decision.py  api_key_service.py  attack_simulation.py  audit.py  cache.py  chronicle_service.py  cloudwatch_service.py  defensive_monitor.py  guardrail_engine.py  ldap_service.py  pagerduty_service.py  reconnaissance.py  saml_service.py  siem_service.py  threat_intel.py  vault_service.py  vulnerability_engine.py  webhook_service.py
app/tasks/: alerts.py  backup.py  maintenance.py  reports.py  scanning.py  siem.py
charts/guardrail-ai/: Chart.yaml  values.yaml
charts/guardrail-ai/templates/: _helpers.tpl  api-deployment.yaml  celery-deployment.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml
docker/: app.Dockerfile  app.Dockerfile.optimized  frontend.Dockerfile
docker/grafana/provisioning/dashboards/: dashboard.yml  guardrail-overview.json
docker/grafana/provisioning/datasources/: prometheus.yml
docker/nginx/: frontend.conf  nginx.conf
docker/prometheus/: alert_rules.yml  prometheus.yml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/pages/: Admin.jsx  ApiKeys.jsx  AuditLog.jsx  Dashboard.jsx  ForgotPassword.jsx  GuardrailDetail.jsx  GuardrailLogs.jsx  Guardrails.jsx  Incidents.jsx  Integrations.jsx  Inventory.jsx  Login.jsx  Policies.jsx  Reports.jsx  ResetPassword.jsx  Settings.jsx  Users.jsx  Webhooks.jsx
frontend/src/services/: api.js
tests/: __init__.py  conftest.py  test_auth.py  test_security.py
